fix: fixed profile text container overflowing3

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -3,11 +3,12 @@
     height: 24px;
     padding: 0;
     align-self: center;
+    box-sizing: border-box;
     margin-left: 18px;
-    border: none;
+    border: 1px solid #fff;
     font: inherit;
     color: inherit;
-    background: center / contain no-repeat url(../../../images/profile__edit-button.svg);
+    background: center no-repeat url(../../../images/profile__edit-button.svg);
     cursor: pointer;
 }
 
