--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,4 +1,5 @@
 .profile__name {
+    overflow-wrap: break-word;
     max-width: 400px;
     margin: 0;
     font-style: normal;
